--- a/preEntrega2/src/views/products.handlebars
+++ b/preEntrega2/src/views/products.handlebars
@@ -1,32 +1,29 @@
-    {{#each products}}
-<div>
+    {{#each docs}}
 <body>
   <div class="wrapper">
-
     <div class="product-img">
-      <img src={{"this.thumbnails"}} height="420" width="327">
+      <img src="{{this.thumbnail}}" height="420" width="327">
     </div>
     <div class="product-info">
       <div class="product-text">
         <h1>{{this.title}}</h1>
-        <h2>by studio and friends</h2>
-        <p>Harvest Vases are a reinterpretation<br> of peeled fruits and vegetables as<br> functional objects. The surfaces<br> appear to be sliced and pulled aside,<br> allowing room for growth. </p>
+        <h2>{{this.category}}</h2>
+        <p><b>Botanicals: <br></b>{{this.description}}</p>
       </div>
       <div class="product-price-btn">
-        <p><span>78</span>$</p>
-        <button type="button">buy now</button>
+        <p>$<span>{{this.price}}</span></p>
+        <button type="button" id="cartButton">Add to cart</button>
       </div>
     </div>
   </div>
-</div>
-
 </body>
   {{/each}}
 
 
+
 <style>
-    .body {
-  background-color: #fdf1ec;
+    body {
+  background-color: #f6f6eb;
 }
 
 .wrapper {
@@ -55,7 +52,8 @@
   height: 420px;
   width: 327px;
   border-radius: 0 7px 10px 7px;
-  background-color: #ffffff;
+  /*background-color: #ffffff;*/
+  background-color: #d2f1e0;
 }
 
 .product-text {
@@ -81,13 +79,13 @@
   font-family: 'Raleway', sans-serif;
   font-weight: 400;
   text-transform: uppercase;
-  color: #d2d2d2;
+  color: #a3a2a2;
   letter-spacing: 0.2em;
 }
 
 .product-text p {
   height: 125px;
-  margin: 0 0 0 38px;
+  margin: 0 0 0 25px;
   font-family: 'Playfair Display', serif;
   color: #8d8d8d;
   line-height: 1.7em;
@@ -98,7 +96,7 @@
 
 .product-price-btn {
   height: 103px;
-  width: 327px;
+  width: 350px;
   margin-top: 17px;
   position: relative;
 }
@@ -109,17 +107,18 @@
   top: -13px;
   height: 50px;
   font-family: 'Trocchi', serif;
-  margin: 0 0 0 38px;
+  margin: 0 0 0 25px;
   font-size: 28px;
   font-weight: lighter;
   color: #474747;
+  margin-top: 22px;
 }
 
 span {
   display: inline-block;
   height: 50px;
   font-family: 'Suranna', serif;
-  font-size: 34px;
+  font-size: 27px;
 }
 
 .product-price-btn button {
