--- a/entrega7/src/views/home.handlebars
+++ b/entrega7/src/views/home.handlebars
@@ -17,6 +17,7 @@
     <a href="#" class="add-to-cart">Add to Cart</a>
   </div>
   <figcaption>
+    <a linkRef="http://"></a>
     <a href="/home/{{this._id}}"><h2 id="oneProduct">{{this.title}}</h2></a>
     <p>{{this.category}}</p>
     <div class="price">${{this.price}}</div>
