--- a/entrega7/src/views/admin.handlebars
+++ b/entrega7/src/views/admin.handlebars
@@ -4,7 +4,7 @@
     <p>Name: {{this.first_name}}</p>
     <p>Last name: {{this.last_name}}</p>
     <p>Email: {{this.email}}</p>
-    <p>Role: {{this.role}}</p>
+    <p>Role: {{this.rol}}</p>
 
     {{/each}}
 
