--- a/entrega7/src/views/partials/navbar2.handlebars
+++ b/entrega7/src/views/partials/navbar2.handlebars
@@ -68,7 +68,7 @@
                   <img src="https://i.postimg.cc/9Mt5sRzP/list-4.jpg" alt="Item Image" />
                 </figure>-->
                 <figcaption class="cart-detail">
-                  <p>Admin</p>
+                  <a href="/sessions/admin"><p>Admin</p></a>
                 </figcaption>                
               </div>
               {{/if}}
