--- a/entrega7/src/views/partials/navbar2.handlebars
+++ b/entrega7/src/views/partials/navbar2.handlebars
@@ -1,7 +1,7 @@
 <header class="wrapper-navbar">
       <!-- brand-navbar start -->
       <div class="brand-navbar">
-        <a href="/home"><img src="https://i.postimg.cc/W4PS83q9/logo-gin-store.png" alt="brand-logo"></a>
+        <a href="/"><img src="https://i.postimg.cc/W4PS83q9/logo-gin-store.png" alt="brand-logo"></a>
       </div>
       <!-- brand-navbar end -->
       <!-- nav-link start -->
