--- a/entrega9/src/views/home.handlebars
+++ b/entrega9/src/views/home.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-<a href="/products/allProducts">All Products</a>
+<a href="/home/allProducts">All Products</a>
 </div>
 <style>
     .container a{
