--- a/entrega9/src/views/partials/navbar2.handlebars
+++ b/entrega9/src/views/partials/navbar2.handlebars
@@ -82,7 +82,7 @@
               </div>
             </div>
             <div class="cart-checkout">
-              <a href="/api/sessions/logout"><button type="submit">Log Out</button></a>
+              <a href="/sessions/logout"><button type="submit">Log Out</button></a>
             </div>
           </div>
         </div>
