--- a/entrega9/src/views/login.handlebars
+++ b/entrega9/src/views/login.handlebars
@@ -1,4 +1,4 @@
-<form action="/api/sessions/login" method="post">
+<form action="/session/login" method="post">
   <h1>Employer Log in</h1>
   <div class="inset">
   <p>
