--- a/entrega9/src/views/register.handlebars
+++ b/entrega9/src/views/register.handlebars
@@ -1,4 +1,4 @@
-<form action="/api/sessions/register" method="post">
+<form action="/session/register" method="post">
   <h1>Employer Log in</h1>
   <div class="inset">
     <p>
