--- a/preEntrega3/src/views/cart.handlebars
+++ b/preEntrega3/src/views/cart.handlebars
@@ -12,7 +12,7 @@
        0
        </span>$</h4>
     </div>
-    {{#each userCart.products}}
+    {{#each cart.products}}
     <div class="product">
       <div>
       </div>
@@ -24,7 +24,7 @@
       </div>
       <div class="quant">
         <span class="minus">-</span>
-        <span class="qt">1</span>
+        <span class="qt">{{this.quantity}}</span>
         <span class="plus">+</span>
       </div>
       <div>
@@ -41,7 +41,7 @@
     </div>
     {{/each}}
     <div>
-      <button id="purchase__btn" value="{{userCart._id}}">PURCHASE</button>
+      <button id="purchase__btn" value="{{cart._id}}">PURCHASE</button>
     </div>
   </div>
 </div>
