--- a/preEntrega3/src/views/home.handlebars
+++ b/preEntrega3/src/views/home.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-<a href="/allProducts">All Products</a>
+<a href="/allProducts">Show all Products (me falta hacer esta vista)</a>
 </div>
 <style>
     .container a{
