--- a/entrega10/src/views/insertProduct.handlebars
+++ b/entrega10/src/views/insertProduct.handlebars
@@ -1,4 +1,4 @@
-<form action="/api/products" method="post">
+<form action="/api/products/create" method="post">
   <h1>Insert Product</h1>
   <div class="inset">
   <p>
