--- a/entrega10/src/views/partials/navbar2.handlebars
+++ b/entrega10/src/views/partials/navbar2.handlebars
@@ -70,7 +70,7 @@
               </div>
               <div class="cart-list">
                 <figcaption class="cart-detail">
-                  <a href="/products/insertProduct"><p>InsertProduct</p></a>
+                  <a href="/insertProduct"><p>InsertProduct</p></a>
                 </figcaption>                                
               </div>
               {{/if}}
