--- a/entrega10/src/views/home.handlebars
+++ b/entrega10/src/views/home.handlebars
@@ -1,5 +1,5 @@
 <div class="container">
-<a href="/allProducts">Show all Products (me falta hacer esta vista)</a>
+<a href="/allProducts">Show all Products (me falta hacer esta vista, igual es link a la vista de productos, hace click je)</a>
 </div>
 <style>
     .container a{
