--- a/entrega12/src/views/resetPassword.handlebars
+++ b/entrega12/src/views/resetPassword.handlebars
@@ -15,15 +15,8 @@
 
 
 <script>
-  import jsdom from 'jsdom'
-  const { JSDOM } = jsdom;
 
-  const dom = new JSDOM(`<!DOCTYPE html><p>Hello world</p>`);
-  const myWindow = dom.window;
-
-  window.email = '<%= email %>' 
-  const email = myWindow.email
-
+const email = {{email}}
 const form = document.querySelector('form')
 const passwordInput = document.getElementById('password')
 
