--- a/entrega12/src/views/forgotPassword.handlebars
+++ b/entrega12/src/views/forgotPassword.handlebars
@@ -16,7 +16,9 @@
   
 
 const form = document.querySelector('form')
+{{!-- const emailsList = {{emails}}; --}}
 const emailInput = document.getElementById('email')
+
 
 const sendEmail = (email) => {
   fetch('/session/sendResetPasswordEmail', {
@@ -30,6 +32,7 @@ const sendEmail = (email) => {
       if (response.ok) {
         console.log('Email enviado exitosamente!');
       } else {
+        alert('Could not find user with given email')
         console.log('Ocurrió un error al enviar el email.');
       }
     })
