--- a/entrega12/src/views/resetPassword.handlebars
+++ b/entrega12/src/views/resetPassword.handlebars
@@ -9,6 +9,8 @@
   </div>
   <p class="p-container">
     <input type="submit" name="go" id="go" value="Send">
+    <input type="hidden" name="email" value={{email}}>
+
   </p>
 </form>
     {{!-- <h1>Please, properly request de link to reset your password</h1> --}}
@@ -16,11 +18,15 @@
 
 <script>
 
-const email = {{email}}
-const form = document.querySelector('form')
+  const form = document.querySelector('form')
+  
+
+  const emailInput = document.querySelector('input[name="email"]');
+  const email = emailInput.value;
+
 const passwordInput = document.getElementById('password')
 
-const sendPassword = (password) => {
+const sendPassword = (password, email) => {
   fetch('/session/passwordReset', {
     method: 'POST',
     headers: {
@@ -42,8 +48,10 @@ const sendPassword = (password) => {
 form.addEventListener('submit', event => {
   event.preventDefault();
   const password = passwordInput.value;
+  sendPassword(password, email);
   console.log(email)
-  sendPassword(password);
+  console.log('enviado datttta')
+
 });
 
 </script>
